--- a/src/components/MiniMenu/MiniMenu.scss
+++ b/src/components/MiniMenu/MiniMenu.scss
@@ -99,6 +99,6 @@
     top: 0;
   }
   .mini-menu:first-child {
-    padding: 0 2px $spacing--xxs;
+    padding: $spacing--xxs;
   }
 }
